style: move right FABs down to avoid search bar overlap

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -196,7 +196,7 @@ html, body {
 .right-fab-container {
   position: fixed;
   right: 20px;
-  top: 60px;
+  top: 130px;
   z-index: 100;
   display: flex;
   flex-direction: column;
